Fixed bug with KJV1611 "thorn" character inconsistencies and some missing spaces. Added explanation in "help" for panels and alt translations. Disabled "swap panels" button when alternate translation is selected. Added public domain headers to main files.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* GHT Study Tool by Nathan P. Wiebe. CSS content. Dedicated to the Public Domain. */
+
 :root {
   --font-family: "Times New Roman", serif;
   --font-size: 16px;
@@ -458,6 +460,10 @@ button {
 
 button:hover {
   background-color: #ddd6c4;   /* darker on hover */
+}
+
+button:disabled {
+  background-color: var(--very-light-tan);   
 }
 
 select {
